# Loom-Code-Reviews

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 184a0cce8697_initial_schema.py  a1aafca93930_add_indexes.py
docs/: PROJECT-PLAN.md  README.md  api.md  architecture.md  configuration.md  custom-prompts.md  example-prompts.md  getting-started.md  llm-providers.md  logging.md  migration.md  self-hosting.md  troubleshooting.md
docs/adapters/: README.md  azure-devops.md  bitbucket.md  gitea.md  github.md  gitlab.md
docs/api/: openapi.yaml  webhooks.md
docs/architecture/: adapter-pattern.md  data-flow.md  overview.md
docs/configuration/: config-schema.md  prompt-format.md
docs/configuration/examples/: README.md  alternative-providers.yaml  enterprise.yaml  (+6 more)
docs/database/: migrations.md  schema.md
docs/deployment/: README.md  development.md  docker.md  environment.md
docs/todo-intern/: QUICKSTART.md  README.md  community.md  documentation.md  features.md  infrastructure.md  project-init.md  track-progress.py
scripts/: seed_db.py
src/database/: connection.py  health.py
src/models/: __init__.py  base.py  finding.py  job.py  repository.py  review.py
src/repositories/: __init__.py  base.py  finding.py  job.py  repository.py  review.py
tests/: conftest.py
tests/integration/: test_migrations.py
(+9 files in other folders)
